# packages/samples/test/output/azure/resource-manager/arm-library/@azure-tools/typespec-autorest/openapi.json
@@ -923,7 +923,7 @@
         "tags": [
           "Tracked2Operations"
         ],
-        "description": "A resource list operation, at the scope of the resource's parent",
+        "description": "List TestTrackedResource2 resources by resource group",
         "parameters": [
           {
             "$ref": "../../../../../../../specs/resource-manager/common-types/v5/types.json#/parameters/ApiVersionParameter"
@@ -1080,7 +1080,7 @@
             "description": "The resource properties to be updated.",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/TestTrackedResource2Update"
+              "$ref": "#/definitions/Microsoft.OperationsTest.TestTrackedResource2Update"
             }
           }
         ],
@@ -1729,15 +1729,15 @@
           "description": "The fully qualified resource ID of the resource that manages this resource. Indicates if this resource is managed by another Azure resource. If this is present, complete mode deployment will not delete the resource if it is removed from the template since it is managed by another resource."
         },
         "plan": {
-          "$ref": "../../../../../../../specs/resource-manager/common-types/v5/types.json#/definitions/Plan",
+          "$ref": "#/definitions/Azure.ResourceManager.CommonTypes.PlanUpdate",
           "description": "Details of the resource plan."
         },
         "sku": {
-          "$ref": "../../../../../../../specs/resource-manager/common-types/v5/types.json#/definitions/Sku",
+          "$ref": "#/definitions/Azure.ResourceManager.CommonTypes.SkuUpdate",
           "description": "The SKU (Stock Keeping Unit) assigned to this resource."
         },
         "identity": {
-          "$ref": "../../../../../../../specs/resource-manager/common-types/v5/managedidentity.json#/definitions/ManagedServiceIdentity",
+          "$ref": "#/definitions/Azure.ResourceManager.CommonTypes.ManagedServiceIdentityUpdate",
           "description": "The managed service identities assigned to this resource."
         },
         "tags": {
@@ -1749,6 +1749,7 @@
         },
         "properties": {
           "$ref": "#/definitions/AllPropertiesResourceUpdateProperties",
+          "description": "The resource-specific properties for this resource.",
           "x-ms-client-flatten": true
         }
       }
@@ -1763,6 +1764,100 @@
           "default": "default"
         }
       }
+    },
+    "Azure.ResourceManager.CommonTypes.ManagedServiceIdentityUpdate": {
+      "type": "object",
+      "description": "Managed service identity (system assigned and/or user assigned identities)",
+      "properties": {
+        "type": {
+          "$ref": "../../../../../../../specs/resource-manager/common-types/v5/managedidentity.json#/definitions/ManagedServiceIdentityType",
+          "description": "The type of managed identity assigned to this resource."
+        },
+        "userAssignedIdentities": {
+          "type": "object",
+          "description": "The identities assigned to this resource by the user.",
+          "additionalProperties": {
+            "allOf": [
+              {
+                "$ref": "../../../../../../../specs/resource-manager/common-types/v5/managedidentity.json#/definitions/UserAssignedIdentity"
+              }
+            ],
+            "type": "object",
+            "x-nullable": true
+          }
+        }
+      }
+    },
+    "Azure.ResourceManager.CommonTypes.PlanUpdate": {
+      "type": "object",
+      "description": "Plan for the resource.",
+      "properties": {
+        "name": {
+          "type": "string",
+          "description": "A user defined name of the 3rd Party Artifact that is being procured."
+        },
+        "publisher": {
+          "type": "string",
+          "description": "The publisher of the 3rd Party Artifact that is being bought. E.g. NewRelic"
+        },
+        "product": {
+          "type": "string",
+          "description": "The 3rd Party artifact that is being procured. E.g. NewRelic. Product maps to the OfferID specified for the artifact at the time of Data Market onboarding."
+        },
+        "promotionCode": {
+          "type": "string",
+          "description": "A publisher provided promotion code as provisioned in Data Market for the said product/artifact."
+        },
+        "version": {
+          "type": "string",
+          "description": "The version of the desired product/artifact."
+        }
+      }
+    },
+    "Azure.ResourceManager.CommonTypes.SkuUpdate": {
+      "type": "object",
+      "description": "The resource model definition representing SKU",
+      "properties": {
+        "name": {
+          "type": "string",
+          "description": "The name of the SKU. Ex - P3. It is typically a letter+number code"
+        },
+        "tier": {
+          "$ref": "../../../../../../../specs/resource-manager/common-types/v5/types.json#/definitions/SkuTier",
+          "description": "This field is required to be implemented by the Resource Provider if the service has more than one tier, but is not required on a PUT."
+        },
+        "size": {
+          "type": "string",
+          "description": "The SKU size. When the name field is the combination of tier and some other value, this would be the standalone code."
+        },
+        "family": {
+          "type": "string",
+          "description": "If the service has different generations of hardware, for the same SKU, then that can be captured here."
+        },
+        "capacity": {
+          "type": "integer",
+          "format": "int32",
+          "description": "If the SKU supports scale out/in then the capacity integer should be included. If scale out/in is not possible for the resource this may be omitted."
+        }
+      }
+    },
+    "Azure.ResourceManager.CommonTypes.TrackedResourceUpdate": {
+      "type": "object",
+      "description": "The resource model definition for an Azure Resource Manager tracked top level resource which has 'tags' and a 'location'",
+      "properties": {
+        "tags": {
+          "type": "object",
+          "description": "Resource tags.",
+          "additionalProperties": {
+            "type": "string"
+          }
+        }
+      },
+      "allOf": [
+        {
+          "$ref": "../../../../../../../specs/resource-manager/common-types/v5/types.json#/definitions/Resource"
+        }
+      ]
     },
     "Azure.ResourceManager.ResourceProvisioningState": {
       "type": "string",
@@ -1961,6 +2056,22 @@
         }
       ]
     },
+    "Microsoft.OperationsTest.TestTrackedResource2Update": {
+      "type": "object",
+      "description": "Concrete tracked resource types can be created by aliasing this type using a specific property type.",
+      "properties": {
+        "properties": {
+          "$ref": "#/definitions/Microsoft.OperationsTest.TestTrackedProperties2",
+          "description": "The resource-specific properties for this resource.",
+          "x-ms-client-flatten": true
+        }
+      },
+      "allOf": [
+        {
+          "$ref": "#/definitions/Azure.ResourceManager.CommonTypes.TrackedResourceUpdate"
+        }
+      ]
+    },
     "SystemEnvelopeProvisioningState": {
       "type": "string",
       "description": "Envelope provisioning state",
@@ -2025,6 +2136,7 @@
       "properties": {
         "properties": {
           "$ref": "#/definitions/TestExtensionResourceUpdateProperties",
+          "description": "The resource-specific properties for this resource.",
           "x-ms-client-flatten": true
         }
       }
@@ -2067,6 +2179,7 @@
       "properties": {
         "properties": {
           "$ref": "#/definitions/TestTenantResourceUpdateProperties",
+          "description": "The resource-specific properties for this resource.",
           "x-ms-client-flatten": true
         }
       }
@@ -2123,34 +2236,6 @@
       "required": [
         "value"
       ]
-    },
-    "TestTrackedResource2Update": {
-      "type": "object",
-      "description": "The type used for update operations of the TestTrackedResource2.",
-      "properties": {
-        "tags": {
-          "type": "object",
-          "description": "Resource tags.",
-          "additionalProperties": {
-            "type": "string"
-          }
-        },
-        "properties": {
-          "$ref": "#/definitions/TestTrackedResource2UpdateProperties",
-          "x-ms-client-flatten": true
-        }
-      }
-    },
-    "TestTrackedResource2UpdateProperties": {
-      "type": "object",
-      "description": "The updatable properties of the TestTrackedResource2.",
-      "properties": {
-        "displayName": {
-          "type": "string",
-          "description": "Name of the resource",
-          "default": "default"
-        }
-      }
     },
     "TestTrackedResourceListResult": {
       "type": "object",
