# packages/typespec-autorest/src/openapi.ts
@@ -13,6 +13,8 @@ import {
 import {
   getArmCommonTypeOpenAPIRef,
   isArmCommonType,
+  isAzureResource,
+  isConditionallyFlattened,
 } from "@azure-tools/typespec-azure-resource-manager";
 import { shouldFlattenProperty } from "@azure-tools/typespec-client-generator-core";
 import {
@@ -195,6 +197,17 @@ export interface AutorestDocumentEmitterOptions {
    * @default "final-state-only"
    */
   readonly emitLroOptions?: "none" | "final-state-only" | "all";
+
+  /**
+   * readOnly property ARM resource flattening
+   */
+  readonly armResourceFlattening?: boolean;
+
+  /**
+   * Determines whether and how to emit schema for arm common-types
+   * @default "for-visibility-only"
+   */
+  readonly emitCommonTypesSchema?: "never" | "for-visibility-changes";
 }
 
 /**
@@ -229,6 +242,14 @@ interface PendingSchema {
    * must be emitted for the type for different visibilities.
    */
   ref: Ref;
+
+  /**
+   * Determines the schema name if an override has been set
+   * @param name The default name of the schema
+   * @param visibility The visibility in which the schema is used
+   * @returns The name of the given schema in the given visibility context
+   */
+  getSchemaNameOverride?: (name: string, visibility: Visibility) => string;
 }
 
 /**
@@ -858,7 +879,13 @@ export async function getOpenAPIForService(
       };
     }
 
-    if (isArmCommonType(type) && (type.kind === "Model" || type.kind === "ModelProperty")) {
+    if (
+      isArmCommonType(type) &&
+      (type.kind === "Model" ||
+        type.kind === "ModelProperty" ||
+        type.kind === "Enum" ||
+        type.kind === "Union")
+    ) {
       const ref = getArmCommonTypeOpenAPIRef(program, type, {
         version: context.version,
         service: context.service,
@@ -872,9 +899,20 @@ export async function getOpenAPIForService(
     return undefined;
   }
   function getSchemaOrRef(type: Type, schemaContext: SchemaContext): any {
+    let schemaNameOverride: ((name: string, visibility: Visibility) => string) | undefined =
+      undefined;
     const ref = resolveExternalRef(type);
     if (ref) {
-      return ref;
+      if (
+        options.emitCommonTypesSchema === "never" ||
+        !metadataInfo.isTransformed(type, schemaContext.visibility)
+      ) {
+        return ref;
+      }
+
+      // Reference schemas will only be generated when they differ from READ
+      schemaNameOverride = (n: string, v: Visibility) =>
+        `${n}${getVisibilitySuffix(v, Visibility.Read)}`;
     }
 
     if (type.kind === "Scalar" && program.checker.isStdType(type)) {
@@ -932,6 +970,7 @@ export async function getOpenAPIForService(
         type,
         visibility: schemaContext.visibility,
         ref: refs.getOrAdd(type, schemaContext.visibility, () => new Ref()),
+        getSchemaNameOverride: schemaNameOverride,
       }));
       return { $ref: pending.ref };
     }
@@ -1003,6 +1042,7 @@ export async function getOpenAPIForService(
         currentEndpoint.parameters.push(shared);
         continue;
       }
+
       if (httpOpParam.type === "header" && isContentTypeHeader(program, httpOpParam.param)) {
         continue;
       }
@@ -1306,7 +1346,9 @@ export async function getOpenAPIForService(
     for (const group of processedSchemas.values()) {
       for (const [visibility, processed] of group) {
         let name = getOpenAPITypeName(program, processed.type, typeNameOptions);
-        if (group.size > 1) {
+        if (processed.getSchemaNameOverride !== undefined) {
+          name = processed.getSchemaNameOverride(name, visibility);
+        } else if (group.size > 1) {
           name += getVisibilitySuffix(visibility, Visibility.Read);
         }
 
@@ -1633,6 +1675,7 @@ export async function getOpenAPIForService(
 
   function includeDerivedModel(model: Model): boolean {
     return (
+      !resolveExternalRef(model) &&
       !isTemplateDeclaration(model) &&
       (model.templateMapper?.args === undefined ||
         model.templateMapper?.args.length === 0 ||
@@ -1690,7 +1733,9 @@ export async function getOpenAPIForService(
       modelSchema.additionalProperties = getSchemaOrRef(model.indexer.value, schemaContext);
     }
 
-    const derivedModels = model.derivedModels.filter(includeDerivedModel);
+    const derivedModels = resolveExternalRef(model)
+      ? []
+      : model.derivedModels.filter(includeDerivedModel);
 
     // getSchemaOrRef on all children to push them into components.schemas
     for (const child of derivedModels) {
@@ -1848,12 +1893,19 @@ export async function getOpenAPIForService(
       propSchema = getSchemaOrRef(prop.type, context);
     }
 
-    return applyIntrinsicDecorators(prop, propSchema);
+    if (options.armResourceFlattening && isConditionallyFlattened(program, prop)) {
+      return { ...applyIntrinsicDecorators(prop, propSchema), "x-ms-client-flatten": true };
+    } else {
+      return applyIntrinsicDecorators(prop, propSchema);
+    }
   }
 
   function attachExtensions(type: Type, emitObject: any) {
     // Attach any OpenAPI extensions
     const extensions = getExtensions(program, type);
+    if (isAzureResource(program, type as Model)) {
+      emitObject["x-ms-azure-resource"] = true;
+    }
     if (getAsEmbeddingVector(program, type as Model) !== undefined) {
       emitObject["x-ms-embedding-vector"] = true;
     }
